<resources>
    <string name="app_name">智能安装系统</string>
    <string name="start_setup">开始安装</string>
    <string name="setup_info">安装信息</string>
    <string name="synchronization">数据同步</string>
    <string name="setting">系统设置</string>
    <string name="add_position">点击添加位置信息</string>
    <string name="setup_project">安装项目</string>
    <string name="choose_project">选择安装项目</string>
    <string name="choose_project_summary">根据安装项目决定具体的安装位置</string>
    <string name="add_project">添加安装项目</string>
    <string name="add_project_summary">点击导入安装项目配置文件</string>
    <string name="import_setup_configuration">导入安装项目配置文件</string>
    <string name="file_manager_can_not_open">无法打开文件管理器</string>
    <string name="import_setup_configuration_failed">导入安装项目配置文件失败</string>
    <string name="current_project">当前所选安装项目</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="is_cover_existed_project">当前已存在同名项目，是否覆盖？</string>
    <string name="save_project_to_local_failed">保存安装项目至本地失败</string>
    <string name="project_has_existed">安装项目不得同名</string>
    <string name="project_name_can_not_be_null">安装项目名称不得为空</string>
    <string name="rename_project_failed">重命名安装项目失败</string>
    <string name="delete_project_and_schemes">是否确实要删除该安装项目及其所有安装方案？</string>
    <string name="delete_project_failed">删除安装项目失败</string>
    <string name="no_project">目前没有安装项目，请在系统设置中添加安装项目</string>
    <string name="input_new_project_name">请为安装项目输入新名称</string>
    <string name="name_scheme">请为安装方案命名</string>
    <string name="scheme_name_can_not_be_null">安装方案名称不得为空</string>
    <string name="number">编号</string>
    <string name="ble_address">蓝牙地址</string>
    <string name="setup_location">安装位置</string>
    <string name="location_name_can_not_be_empty">安装位置名称不得为空</string>
    <string name="location_name_can_not_be_duplicated">安装位置名称不得重复</string>
    <string name="input_location_name">请输入位置名称</string>
    <string name="new_location">新的位置</string>
    <string name="position">具体位置</string>
    <string name="location_contains_unfull_info">位置信息尚不完整，是否退出？</string>
    <string name="scheme_has_changed">安装方案已改动，是否保存</string>
    <string name="locations_lack_info">安装位置信息尚有缺失，是否依然退出并保存？</string>
    <string name="scheme_save_success">安装方案保存成功</string>
    <string name="scheme_save_failed">安装方案保存失败</string>
    <string name="import_scheme_failed">导入安装方案失败</string>
    <string name="is_create_scheme">目前已有安装方案，是否新建</string>
    <string name="select_scheme">选择已有安装方案</string>
    <string name="reset_devices">重置位置信息</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="rename_location">重命名安装地点</string>
    <string name="scheme_name_can_not_be_duplicated">安装方案名称不得重复</string>
    <string-array name="project_entry">
        <item name="project_entry_select">启用</item>
        <item name="project_entry_rename">重命名</item>
        <item name="project_entry_delete">删除</item>
    </string-array>
    <string-array name="setup_positions">
        <item name="setup_position_a">A相</item>
        <item name="setup_position_b">B相</item>
        <item name="setup_position_c">C相</item>
    </string-array>
</resources>
