<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/tv_number"
        android:text="@string/number"
        android:gravity="center"
        android:textSize="@dimen/size_text_title_small"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:id="@+id/tv_ble_address"
        android:text="@string/ble_address"
        android:textSize="@dimen/size_text_title_small"
        android:gravity="center"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:id="@+id/tv_position"
        android:text="@string/position"
        android:gravity="center"
        android:textSize="@dimen/size_text_title_small"/>
</LinearLayout>