<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:TextViewEx="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/cover_ends">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="@dimen/size_text_title_large"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/cover_middle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_setup"
            android:text="@string/start_setup"
            android:textSize="@dimen/size_text_title_big"
            android:padding="@dimen/padding_mid"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_start_setup" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/cover_ends">
        <com.weisi.tool.smartnfcsetuphelper.ui.view.TextViewEx
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tv_setup_info"
            android:text="@string/setup_info"
            android:drawableTop="@drawable/ic_setup_info"
            android:textSize="@dimen/size_text_activity"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            TextViewEx:drawable_width="@dimen/size_image_middle"
            TextViewEx:drawable_height="@dimen/size_image_middle"/>
        <com.weisi.tool.smartnfcsetuphelper.ui.view.TextViewEx
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tv_synchronization"
            android:text="@string/synchronization"
            android:drawableTop="@drawable/ic_synchronization"
            android:textSize="@dimen/size_text_activity"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            TextViewEx:drawable_width="@dimen/size_image_middle"
            TextViewEx:drawable_height="@dimen/size_image_middle"/>
        <com.weisi.tool.smartnfcsetuphelper.ui.view.TextViewEx
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/tv_setting"
            android:text="@string/setting"
            android:drawableTop="@drawable/ic_setting"
            android:textSize="@dimen/size_text_activity"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            TextViewEx:drawable_width="@dimen/size_image_middle"
            TextViewEx:drawable_height="@dimen/size_image_middle"/>
    </LinearLayout>
</LinearLayout>
